--- a/templates/index.html
+++ b/templates/index.html
@@ -55,11 +55,11 @@
     <ul class="nav-ul">
 <!--     <ul> -->
       <li class="nav-li" id="theTeam"><button type="button" class="btn btn-tms btn-default">
-        <span class="glyphicon glyphicon-chevron-right">&nbsp;</span>THE TEAM</button></li>
+        <span class="glyphicon glyphicon-chevron-right"></span>&nbsp;About Us</button></li>
       <li class="nav-li" id="theTeam"><button type="button" class="btn btn-tms btn-default">
-        <span class="glyphicon glyphicon-chevron-right">&nbsp;</span>THE PROJECT</button></li>
+        <span class="glyphicon glyphicon-chevron-right"></span>&nbsp;Project</button></li>
       <li class="nav-li" id="theTeam"><button type="button" class="btn btn-tms btn-default" href="login.html">
-        <span class="glyphicon glyphicon-chevron-right">&nbsp;</span>LOGOUT</button></li>
+        <span class="glyphicon glyphicon-chevron-right"></span>&nbsp;Logout</button></li>
       <!-- <li class="nav-li" id="theProject"><a href="theProject.html">the Project</a></li>
       <li class="nav-li"><a href="login.html">Logout</a></li>
       <li class="nav-a"><a href="" class="edit-btn btn btn-danger btn-small">Logout</a></li> -->
@@ -92,76 +92,142 @@
       <div class="col-md-12 col-sm-12 team-background">
         <div class="col-md-12 text-center">
           <h1>THE TEAM</h1>
+          <hr>
           <br>
         </div>  
-        <div class="col-md-3  text-center">
+        <div class="col-md-3  text-center h1-top">
           <h2>Tal Zivelin</h2>
-          <img src="../img/Tal_Zivelin_cartoon.jpeg">
-        </div>
-          <div class="col-md-9 team-descriptiont">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Integer ultrices ante eget sagittis molestie. Curabitur id feugiat elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Integer ultrices ante eget sagittis molestie. Curabitur id feugiat elit.
-            </p>
-            <div class="team-social-icon">
-              <ul>
-                <li><span class="github"></span><a href=""></a></li>
-                <li><span class="linkedin"><a href=""><i class="glyphicons icon-linked-in"></i></a></li>
+           <div class="team-social-icon">
+              <ul class="social-icons-ul">
+                <li class="social-icons-li"  href="https://goo.gl/w0nUh3"/>
+                  <button onclick="window.location.href='https://goo.gl/w0nUh3'" class="linkedin-link" id="linkedin">
+                  </a>  
+                </li>
+
+                <li class="social-icons-li"  >
+                  <button onclick="window.location.href='https://github.com/tzivelin'" class="github-link" id="github">
+                  </a>  
+                </li>
+
+                <li class="social-icons-li" >
+                  <button onclick="window.location.href='mailto:talzivelin@gmail.com?subject=TMS Contact'" class="email-link" id="email">
+                  </a>  
+                </li>
               </ul>  
           </div>
+        </div>
+          <div class="col-md-4 team-descriptiont">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue.
+            </p>
+        </div>
+        <div class="col-md-4 team-descriptiont">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Integer ultrices ante eget sagittis molestie. Curabitur id feugiat elit.
+            </p>
         </div>
       </div> 
 
       <div class="col-md-12 col-sm-12 team-background">
-        <div class="col-md-3  text-center">
+        <div class="col-md-3  text-center h1-top">
           <h2>Alan Rahi</h2>
-          <img src="../img/Tal_Zivelin_cartoon.jpeg">
+           <div class="team-social-icon">
+              <ul class="social-icons-ul">
+                <li class="social-icons-li"  href="https://goo.gl/w0nUh3"/>
+                  <button onclick="window.location.href='https://goo.gl/1l9m06'" class="linkedin-link" id="linkedin">
+                  </a>  
+                </li>
+
+                <li class="social-icons-li"  >
+                  <button onclick="window.location.href='https://github.com/alanrahi'" class="github-link" id="github">
+                  </a>  
+                </li>
+
+                <li class="social-icons-li" >
+                  <button onclick="window.location.href='mailto:alan@webfordoctors.com?subject=TMS Contact'" class="email-link" id="email">
+                  </a>  
+                </li>
+              </ul>  
+          </div>
         </div>
-        <div class="col-md-9 team-descriptiont">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Integer ultrices ante eget sagittis molestie. Curabitur id feugiat elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Integer ultrices ante eget sagittis molestie. Curabitur id feugiat elit.
-          </p>
-          <div class="team-social-icon">
-            <ul>
-              <li><span class="github"></span><a href=""></a></li>
-              <li><span class="linkedin"><a href=""></a></li>
-            </ul>  
-        </div> 
+        <div class="col-md-4 team-descriptiont">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue.
+            </p>
+        </div>
+        <div class="col-md-4 team-descriptiont">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Integer ultrices ante eget sagittis molestie. Curabitur id feugiat elit.
+            </p>
         </div>
       </div> 
       
       <div class="col-md-12 col-sm-12 team-background">
-        <div class="col-md-3  text-center">
+        <div class="col-md-3  text-center h1-top">
           <h2>Tod Redmond</h2>
-          <img src="../img/Tal_Zivelin_cartoon.jpeg">
+           <div class="team-social-icon">
+              <ul class="social-icons-ul">
+                <li class="social-icons-li"  href="https://goo.gl/w0nUh3"/>
+                  <button onclick="window.location.href='https://goo.gl/1nebSP'" class="linkedin-link" id="linkedin">
+                  </a>  
+                </li>
+
+                <li class="social-icons-li"  >
+                  <button onclick="window.location.href='https://github.com/tredmond'" class="github-link" id="github">
+                  </a>  
+                </li>
+
+                <li class="social-icons-li" >
+                  <button onclick="window.location.href='mailto:tredmond2378@gmail.com?subject=TMS Contact'" class="email-link" id="email">
+                  </a>  
+                </li>
+              </ul>  
+          </div>
         </div>
-        <div class="col-md-9 team-descriptiont">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Integer ultrices ante eget sagittis molestie. Curabitur id feugiat elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Integer ultrices ante eget sagittis molestie. Curabitur id feugiat elit.
-          </p>
-          <div class="team-social-icon">
-            <ul>
-              <li><span class="github"></span><a href=""></a></li>
-              <li><span class="linkedin"><a href=""></a></li>
-            </ul>  
-        </div>  
+        <div class="col-md-4 team-descriptiont">
+            <p>An information technology professional who partners with the business throughout the organization to provide staff the technical support needed to reach business goals and who can translate well between end-user and information technology terminology. This includes experience in project 
+            </p>
+        </div>
+        <div class="col-md-4 team-descriptiont">
+            <p>management, enterprise software and hardware implementation, advanced troubleshooting, coaching virtual technology teams, supporting and assisting local staff, and working with senior leaders on high-level, confidential and mission-critical projects.
+            </p>
         </div>
       </div> 
 
       <div class="col-md-12 col-sm-12 team-background">
-        <div class="col-md-3  text-center">
+        <div class="col-md-3  text-center h1-top">
           <h2>Danniel Rolfe</h2>
-          <img src="../img/Tal_Zivelin_cartoon.jpeg">
+            <div class="team-social-icon">
+              <ul class="social-icons-ul">
+                <li class="social-icons-li"  href="https://goo.gl/w0nUh3"/>
+                  <button onclick="window.location.href='https://www.linkedin.com/in/dannielrolfe'" class="linkedin-link" id="linkedin">
+                  </a>  
+                </li>
+
+                <li class="social-icons-li"  >
+                  <button onclick="window.location.href='https://github.com/drdesign'" class="github-link" id="github">
+                  </a>  
+                </li>
+
+                <li class="social-icons-li" >
+                  <button onclick="window.location.href='mailto:info@dannielrolfe.com?subject=TMS Contact'" class="email-link" id="email">
+                  </a>  
+                </li>
+              </ul>  
+          </div>
         </div>
-        <div class="col-md-9 team-descriptiont">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Integer ultrices ante eget sagittis molestie. Curabitur id feugiat elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Integer ultrices ante eget sagittis molestie. Curabitur id feugiat elit.
-          </p>
-          <div class="team-social-icon">
-            <ul>
-              <li><span class="github"></span><a href=""></a></li>
-              <li><span class="linkedin"><a href=""></a></li>
-            </ul>  
+        <div class="col-md-4 team-descriptiont">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue.
+            </p>
         </div>
-      </div> 
-    </div>  
+        <div class="col-md-4 team-descriptiont">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin faucibus ultrices congue. Fusce mattis aliquam purus, ac tincidunt enim tincidunt at. Vivamus porttitor accumsan auctor. Integer ultrices ante eget sagittis molestie. Curabitur id feugiat elit.
+            </p>
+        </div>
+      </div>  
+
+      <div class="col-md-12 text-center">
+          <hr>
+        </div>
+    </div>
   </div>
-</div>
+</div><!--background-->
   <!-- the form, used for create and edit -->
   <script type="text/jst" id="formTemplate">
     <div class="well">
